[tool.poetry]
name = "jax-book"
version = "0.1.0"
description = ""
authors = ["koukyo1994 <arabiannight1994@yahoo.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jax = "^0.4.8"
jaxlib = "^0.4.7"
flax = "^0.6.9"
optax = "^0.1.5"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
pandas = "^2.0.1"
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
